# TANK

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  TANK.cbp  cmake_install.cmake  file.c  file.h
buffers/: VirtualRDMARingBuffer.c  VirtualRDMARingBuffer.h  VirtualSHMDoubleRingBuffer.c  VirtualSHMDoubleRingBuffer.h  VirtualSHMRingBuffer.c  VirtualSHMRingBuffer.h
client/: RdmaClient.c  RdmaClient.h  SharedMemoryClient.c  SharedMemoryClient.h  TcpClient.c  TcpClient.h
connections/: P2PConnection.c  P2PConnection.h
rdma/: CompletionQueuePair.c  CompletionQueuePair.h  Network.c  Network.h  QueuePair.c  QueuePair.h  RDMANetworking.c  RDMANetworking.h  RcQueuePair.c  RcQueuePair.h  UcQueuePair.c  UcQueuePair.h  UdQueuePair.c  UdQueuePair.h
server/: RdmaServer.c  RdmaServer.h  SharedMemoryServer.c  SharedMemoryServer.h  TcpServer.c  TcpServer.h
test/: P2PTest.c  bench.c  bench.h
utils/: utils.c  utils.h  vec.c  vec.h  virtualMemory.c  virtualMemory.h
